--- a/Alfred.alfredpreferences/workflows/user.workflow.3C2A1962-C028-4614-BFD2-FC8DC3590330/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.3C2A1962-C028-4614-BFD2-FC8DC3590330/info.plist
@@ -386,11 +386,11 @@ end alfred_script</string>
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>99</integer>
+				<integer>17</integer>
 				<key>hotmod</key>
-				<integer>8388608</integer>
+				<integer>1835008</integer>
 				<key>hotstring</key>
-				<string>F3</string>
+				<string>T</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
