SO MUCH BETTER TMUX

--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -1,13 +1,5 @@
-# Switched back to crtl+b. Leaving this here for reference.
-# use ctrl+l instead of ctrl+b (just like screen!)
-# unbind C-b
-# unbind C-l
-# set -g prefix C-l
-# bind C-l send-prefix
-
 # Enable mouse support
 set -g mouse on
-
 
 # Add truecolor support
 # (recommendation from: https://github.com/rakr/vim-one)
@@ -70,65 +62,40 @@ if 'command -v fpp >/dev/null' \
 
 # have tmux setting titles of windows
 set-option -g set-titles on
-set-option -g set-titles-string '#S@#h'
+set-option -g set-titles-string '#W · [#S] · #h'
 
-# Customize Statusbar
-# reminder of colors
-# colour0 = black
-# colour1 = red
-# colour2 = green
-# colour3 = yellow
-# colour4 = blue
-# colour5 = purple
-# colour6 = turquoise
-# colour7 = white
+set-option -g pane-border-style fg='magenta'
+# set-option -g status-style fg='color233',bg='color249'
+set-option -g status-style fg='default',bg='default'
 
-set-window-option -g status-bg default
-#
-
-set-window-option -g status-left "[#S]  "
-
-set-option -g status-right "#(echo $USER)@#h /#(uptime | rev | cut -d':' -f1 | rev | cut -d ',' -f 1) / #(mempressure.sh) / #(date '+%a %b %d / %H:%M')"
+# change color if we press meta+B
+# Orangeish
+set -g status-left '#[bg=default]#[fg=teal]#{?client_prefix,#[bg=teal]#[fg=white],} ★ #[bg=default]'
 
 set -g status-left-length 20
 set -g status-right-length 100
 
-set-window-option -g window-status-format "#I:#W "
-set-window-option -g window-status-current-format "#I:#W "
+# Greenish
+set-window-option -g window-status-format " [#I] "
+set-window-option -g window-status-style fg='default'
+set-window-option -g window-status-current-format " [#S/#I] #W "
+set-window-option -g window-status-separator ''
+set-window-option -g window-status-current-style fg='magenta'
+set -g pane-border-style fg='default'
+set -g pane-active-border-style fg='magenta'
 
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | grep -oE '[0-9]+\.[0-9]*')"
-run-shell "tmux setenv -g TMUX_FG_MAIN $(rgb_color_generator.py -x)"
-run-shell "tmux setenv -g TMUX_FG_SECOND '#9e9e9e'"
+set-window-option -g status-right-style fg='default',bg='default'
+# Blueish
+set-option -g status-right "#[bg=default,fg=green] #h "
+# Redish
+set-option -ag status-right "#[bg=default,fg=yellow]#(uptime | rev | cut -d':' -f1 | rev | cut -d ',' -f 1) "
+# Yellowish
+set-option -ag status-right "#[bg=default,fg=blue] #(mempressure.sh) "
+# Purpleish
+set-option -ag status-right "#[bg=default,fg=red] #(date '+%a %b %d / %H:%M') "
 
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' ' \
-	set-option -g pane-border-fg $TMUX_FG_SECOND; \
-	set-option -g pane-active-border-fg $TMUX_FG_MAIN; \
-	set-window-option -g window-status-current-fg $TMUX_FG_MAIN; \
-	set-window-option -g window-status-current-bg default; \
-	set-option -g status-right-fg $TMUX_FG_SECOND; \
-	set-window-option -g status-right-bg default; \
-	set-option -g status-left-fg $TMUX_FG_SECOND; \
-	set-window-option -g status-left-bg default; \
-	set-window-option -g window-status-fg $TMUX_FG_SECOND; \
-	'
+# selection
+set -g mode-style bg="teal",fg="white"
 
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' ' \
-	set-option -g pane-border-style fg=$TMUX_FG_SECOND; \
-	set-option -g pane-active-border-style fg=$TMUX_FG_MAIN; \
-	set-window-option -g window-status-current-style fg=$TMUX_FG_MAIN,bg=default; \
-	set-option -g status-right-style fg=$TMUX_FG_SECOND; \
-	set-window-option -g status-right-style fg=$TMUX_FG_SECOND; \
-	set-option -g status-left-style fg=$TMUX_FG_SECOND,bg=default; \
-	set-window-option -g window-status-style fg=$TMUX_FG_SECOND; \
-	'
-
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 3.3" | bc)" = 1 ]' ' \
-	set-option -g pane-border-style fg=$TMUX_FG_SECOND; \
-	set-option -g pane-active-border-style fg=$TMUX_FG_MAIN; \
-	set-window-option -g window-status-current-style fg=$TMUX_FG_MAIN,bg=default; \
-	set-option -g status-right-style fg=$TMUX_FG_SECOND; \
-	set-window-option -g status-right-style fg=$TMUX_FG_SECOND; \
-	set-option -g status-left-style fg=$TMUX_FG_SECOND,bg=default; \
-	set-window-option -g window-status-style fg=$TMUX_FG_SECOND; \
-    set-option -g status-style bg=default,default \
-	'
+# command bar
+set -g message-style bg="teal",fg="white"
