--- a/Alfred.alfredpreferences/workflows/user.workflow.4BC35DD4-1559-46FA-B92A-50ABABBDEF4F/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.4BC35DD4-1559-46FA-B92A-50ABABBDEF4F/info.plist
@@ -298,7 +298,7 @@
 				<key>hotkey</key>
 				<integer>123</integer>
 				<key>hotmod</key>
-				<integer>10878976</integer>
+				<integer>11272192</integer>
 				<key>hotstring</key>
 				<string>←</string>
 				<key>leftcursor</key>
@@ -331,7 +331,7 @@
 				<key>hotkey</key>
 				<integer>124</integer>
 				<key>hotmod</key>
-				<integer>10878976</integer>
+				<integer>11272192</integer>
 				<key>hotstring</key>
 				<string>→</string>
 				<key>leftcursor</key>
@@ -387,7 +387,7 @@
 				<key>hotkey</key>
 				<integer>126</integer>
 				<key>hotmod</key>
-				<integer>10878976</integer>
+				<integer>11272192</integer>
 				<key>hotstring</key>
 				<string>↑</string>
 				<key>leftcursor</key>
@@ -420,7 +420,7 @@
 				<key>hotkey</key>
 				<integer>125</integer>
 				<key>hotmod</key>
-				<integer>10878976</integer>
+				<integer>11272192</integer>
 				<key>hotstring</key>
 				<string>↓</string>
 				<key>leftcursor</key>
@@ -451,11 +451,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>18</integer>
+				<integer>29</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>1</string>
+				<string>0</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -484,11 +484,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>19</integer>
+				<integer>25</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>2</string>
+				<string>9</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -517,11 +517,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>20</integer>
+				<integer>28</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>3</string>
+				<string>8</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -550,11 +550,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>12</integer>
+				<integer>31</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>Q</string>
+				<string>O</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -583,11 +583,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>13</integer>
+				<integer>35</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>W</string>
+				<string>P</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -616,11 +616,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>0</integer>
+				<integer>40</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>A</string>
+				<string>K</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -649,11 +649,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>1</integer>
+				<integer>37</integer>
 				<key>hotmod</key>
-				<integer>655360</integer>
+				<integer>786432</integer>
 				<key>hotstring</key>
-				<string>S</string>
+				<string>L</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
