--- a/Alfred.alfredpreferences/preferences/features/filesearch/actions/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/features/filesearch/actions/prefs.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>disabledDefaultActions</key>
+	<dict>
+		<key>alfred.action.mixed.email</key>
+		<true/>
+		<key>alfred.action.mixed.emailto</key>
+		<true/>
+		<key>alfred.action.showaslargetype</key>
+		<true/>
+		<key>alfred.action.text.saveassnippet</key>
+		<true/>
+	</dict>
 	<key>finderSelectionHotkey</key>
 	<dict>
 		<key>key</key>
