--- a/Alfred.alfredpreferences/workflows/user.workflow.F3DA9C43-8B82-4FB4-A429-32D878607189/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.F3DA9C43-8B82-4FB4-A429-32D878607189/info.plist
@@ -347,11 +347,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>44</integer>
+				<integer>0</integer>
 				<key>hotmod</key>
-				<integer>1835008</integer>
+				<integer>0</integer>
 				<key>hotstring</key>
-				<string>/</string>
+				<string></string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
