--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -62,7 +62,7 @@ if 'command -v fpp >/dev/null' \
 
 # have tmux setting titles of windows
 set-option -g set-titles on
-set-option -g set-titles-string '#W · [#S] · #h'
+set-option -g set-titles-string '#I·#W'
 
 set-option -g pane-border-style fg='magenta'
 # set-option -g status-style fg='color233',bg='color249'
@@ -70,15 +70,15 @@ set-option -g status-style fg='default',bg='default'
 
 # change color if we press meta+B
 # Orangeish
-set -g status-left '#[bg=default]#[fg=teal]#{?client_prefix,#[bg=teal]#[fg=white],} ★ #[bg=default]'
+set -g status-left '#[bg=default]#[fg=default]#{?client_prefix,#[bg=default]#[fg=magenta],} ⏺ #[bg=default]'
 
 set -g status-left-length 20
 set -g status-right-length 100
 
 # Greenish
-set-window-option -g window-status-format " [#I] "
+set-window-option -g window-status-format " #I·#W"
 set-window-option -g window-status-style fg='default'
-set-window-option -g window-status-current-format " [#S/#I] #W "
+set-window-option -g window-status-current-format " #I·#W"
 set-window-option -g window-status-separator ''
 set-window-option -g window-status-current-style fg='magenta'
 set -g pane-border-style fg='default'
@@ -86,13 +86,13 @@ set -g pane-active-border-style fg='magenta'
 
 set-window-option -g status-right-style fg='default',bg='default'
 # Blueish
-set-option -g status-right "#[bg=default,fg=green] #h "
-# Redish
-set-option -ag status-right "#[bg=default,fg=yellow]#(uptime | rev | cut -d':' -f1 | rev | cut -d ',' -f 1) "
+# set-option -g status-right "#[bg=default,fg=green] #h "
+# # Uptime, disable
+# set-option -ag status-right "#[bg=default,fg=yellow]#(uptime | rev | cut -d':' -f1 | rev | cut -d ',' -f 1) "
 # Yellowish
-set-option -ag status-right "#[bg=default,fg=blue] #(mempressure.sh) "
+# set-option -ag status-right "#[bg=default,fg=red] #(mempressure.sh) "
 # Purpleish
-set-option -ag status-right "#[bg=default,fg=red] #(date '+%a %b %d / %H:%M') "
+set-option -g status-right "#[bg=default,fg=default] #(date '+%a %m/%d %H:%M') "
 
 # selection
 set -g mode-style bg="teal",fg="white"
