nested tmux ctrl-b alternative

--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -23,6 +23,10 @@ set -g focus-events on
 set -g update-environment -r
 setenv -g SSH_AUTH_SOCK "$HOME/.ssh/ssh_auth_sock.$HOSTNAME"
 
+# use CTRL-\ to send prefix to double nested tmux window; CTRL-^ to triple nested tmux
+bind-key -n 'C-\' send-prefix
+bind-key -n C-^ send-prefix \; send-prefix
+
 # resize using meta+arrows
 bind-key -r M-Up resize-pane -U 5
 bind-key -r M-Down resize-pane -D 5
