--- a/home-symlink/config/ghostty/config
+++ b/home-symlink/config/ghostty/config
@@ -1,4 +1,27 @@
+# Visual elements
 font-family = "Fira Code Medium"
-font-size = "14"
+font-size = "13"
 theme = "light:catppuccin-latte,dark:catppuccin-frappe"
 bold-is-bright = "false"
+background-opacity = "0.9"
+background-blur-radius = "32"
+adjust-cell-height = "10%"
+cursor-style = "block"
+
+# MacOS specific settings
+macos-titlebar-style = "transparent"
+
+# Shell integration
+shell-integration = "detect"
+shell-integration-features = "no-cursor,sudo,title"
+
+# Behavior
+cursor-click-to-move = "true"
+desktop-notifications = "true"
+auto-update = "download"
+link-url = "true"
+cursor-click-to-move = "true"
+mouse-hide-while-typing = "true"
+
+# Key bindings
+keybind = "super+r=reload_config"
