--- a/home-symlink/config/ghostty/config
+++ b/home-symlink/config/ghostty/config
@@ -1,16 +1,12 @@
 # Visual elements
-font-family = "Fira Code Medium"
+font-family = "Iosevka Medium"
 font-size = "13"
 theme = "light:catppuccin-latte,dark:catppuccin-frappe"
 bold-is-bright = "false"
-# background-opacity = "0.9"
-# background-blur-radius = "32"
 adjust-cell-height = "10%"
 cursor-style = "block"
-window-theme = "ghostty"
 
 # MacOS specific settings
-# macos-titlebar-style = "transparent"
 macos-titlebar-style = "tabs"
 
 # Shell integration
